@@ -138,8 +138,11 @@
 				<td>telephone modem (ACTS, PTB, etc.)</td>
 			</tr>
 		</table>
-		<p>The Count Field displays the number of events since the last <tt>rv</tt> command while the Event Field displays the most recent event message coded as follows:</p>
-		<table width="100%" border="1" cellspacing="2" cellpadding="2">
+		<p>The Count Field displays the number of events since the last time the 
+			code changed. Upon reaching 15, subsequent events with the same code
+			are ignored. The Event Field displays the most recent event message
+			coded as follows:</p>
+<table width="100%" border="1" cellspacing="2" cellpadding="2">
 			<tr>
 				<td>Code</td>
 				<td>Message</td>
@@ -328,8 +331,10 @@
 				<td>PPS peer (when the prefer peer is valid)</td>
 			</tr>
 		</table>
-		<p>The Count Field displays the number of events since the last <tt>rv</tt> command, while the Event Field displays the most recent event message coded as follows:</p>
-		<table width="100%" border="1" cellspacing="2" cellpadding="2">
+		<p>The Count Field displays the number of events since the last time the code
+		changed. Upon reaching 15, subsequent events with the same code are ignored.
+			The Event Field displays the most recent event message coded as follows:</p>
+<table width="100%" border="1" cellspacing="2" cellpadding="2">
 			<tr>
 				<td>Code</td>
 				<td>Message</td>
