@@ -1,3 +1,4 @@
+* Documentation updates from Dave Mills.
 * CHU frequency updates.
 * Design assertion fixes for ntp_crypto.c from Dave Mills.
 (4.2.5p154) 2009/01/13 Released by Harlan Stenn <stenn@ntp.org>
